--- a/creative.css
+++ b/creative.css
@@ -34,7 +34,8 @@ h4,
 h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
-
+.mycolleges {
+  font-size:24px;
 p {
   font-size: 16px;
   line-height: 1.5;
